[package]
name = "rx-repack"
description = "Rust re-write of px-repack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
clap = { version = "4.3.12", features = ["derive"] }
dicom = "0.5.4"
regex = "1.9.1"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.103"
fs-err = "2.9.0"
camino = "1.1.6"
hashbrown = { version = "0.14.0", features = ["serde"] }

# https://github.com/johnthagen/min-sized-rust
[profile.release]
strip = "symbols"
lto = "fat"
codegen-units = 1

[dev-dependencies]
glob = "0.3.1"
pathdiff = { version = "0.2.1", features = ["camino"] }
tempdir = "0.3.7"
